Generate Jacoco report after CI testing

--- a/circle.yml
+++ b/circle.yml
@@ -7,5 +7,6 @@ test:
   pre:
     - ./gradlew checkSourceFormatting
   post:
+    - ./gradlew jacocoTestReport
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
