Check source formatting during CI testing

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,8 @@ machine:
   java:
     version: openjdk8
 test:
+  pre:
+    - ./gradlew checkSourceFormatting
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
