--- a/server/configuration.json
+++ b/server/configuration.json
@@ -1,10 +1,10 @@
 {
 	"geo": {
-		"dbLineDelimiter": "\r\n",
-		"dbUrl": "http://federalgovernmentzipcodes.us/free-zipcode-database-Primary.csv",
-		"dbValueDelimiterPattern": ",",
-		"dbValueIndexCity": 2,
-		"dbValueIndexState": 3,
-		"dbValueIndexZipCode": 0
+		"delimiter": "\r\n",
+		"url": "http://federalgovernmentzipcodes.us/free-zipcode-database-Primary.csv",
+		"valueDelimiterPattern": ",",
+		"valueIndexCity": 2,
+		"valueIndexState": 3,
+		"valueIndexZipCode": 0
 	}
 }
