--- a/circle.yml
+++ b/circle.yml
@@ -16,3 +16,4 @@ test:
     - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
     - cp -r build/reports/jacoco/ $CIRCLE_ARTIFACTS
     - test -z $CODACY_PROJECT_TOKEN || java -cp ~/codacy-coverage-reporter.jar com.codacy.CodacyCoverageReporter -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
+    - bash <(curl -s https://codecov.io/bash)
