Show logs in console

--- a/server/src/main/resources/vertx-default-jul-logging.properties
+++ b/server/src/main/resources/vertx-default-jul-logging.properties
@@ -1,1 +1,4 @@
-com.github.ithildir.level=FINER
+handlers=java.util.logging.ConsoleHandler
+
+.level=INFO
+com.github.ithildir.airbot.server.level=FINER
