Reply to api.ai with air quality based on user's location

--- a/src/main/resources/content/Language.properties
+++ b/src/main/resources/content/Language.properties
@@ -1,5 +1,6 @@
 good=good
 hazardous=hazardous
+in-order-to-get-information-about-the-air-quality-around-you=In order to get information about the air quality around you
 moderate=moderate
 pollutant-co=Carbon Monoxide
 pollutant-no2=Nitrogen Dioxide
